[gd_scene load_steps=8 format=3 uid="uid://ct0tllyo6jham"]

[ext_resource type="Script" path="res://scripts/level_selection.gd" id="1_valy6"]
[ext_resource type="PackedScene" uid="uid://dq8j2l7qria7g" path="res://scenes/trial_drag_and_drop.tscn" id="2_gbs7s"]
[ext_resource type="PackedScene" uid="uid://iu2evbyq13hu" path="res://scenes/level_2.tscn" id="3_0mhak"]
[ext_resource type="PackedScene" uid="uid://t2xil1vpr48x" path="res://scenes/level_3.tscn" id="4_3sl1j"]
[ext_resource type="PackedScene" uid="uid://dp5ql4wfhnq87" path="res://scenes/level_4.tscn" id="5_2q5yx"]
[ext_resource type="PackedScene" uid="uid://drdq6mfkmxmts" path="res://scenes/level_5.tscn" id="6_7u804"]
[ext_resource type="PackedScene" uid="uid://xnqbypxxfiob" path="res://buttons/menu_button.tscn" id="7_85u42"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_valy6")
level1 = ExtResource("2_gbs7s")
level2 = ExtResource("3_0mhak")
level3 = ExtResource("4_3sl1j")
level4 = ExtResource("5_2q5yx")
level5 = ExtResource("6_7u804")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 646.0
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Level1_btn" type="Button" parent="."]
offset_left = 233.0
offset_top = 273.0
offset_right = 347.0
offset_bottom = 388.0
text = "1"

[node name="Level2_btn" type="Button" parent="."]
offset_left = 373.0
offset_top = 273.0
offset_right = 487.0
offset_bottom = 388.0
text = "2"

[node name="Level3_btn" type="Button" parent="."]
offset_left = 517.0
offset_top = 274.0
offset_right = 631.0
offset_bottom = 389.0
text = "3"

[node name="Level4_btn" type="Button" parent="."]
offset_left = 653.0
offset_top = 273.0
offset_right = 767.0
offset_bottom = 388.0
text = "4"

[node name="Level5_btn" type="Button" parent="."]
offset_left = 789.0
offset_top = 273.0
offset_right = 903.0
offset_bottom = 388.0
text = "5"

[node name="MenuButton" parent="." instance=ExtResource("7_85u42")]
position = Vector2(32, 36)

[connection signal="pressed" from="Level1_btn" to="." method="_on_level_1_btn_pressed"]
[connection signal="pressed" from="Level2_btn" to="." method="_on_level_2_btn_pressed"]
[connection signal="pressed" from="Level3_btn" to="." method="_on_level_3_btn_pressed"]
[connection signal="pressed" from="Level4_btn" to="." method="_on_level_4_btn_pressed"]
[connection signal="pressed" from="Level5_btn" to="." method="_on_level_5_btn_pressed"]
